Fix spacing on entry title.

--- a/res/screen.css
+++ b/res/screen.css
@@ -402,7 +402,7 @@ div.post {
     border-left:none; border-right:none;
     padding:8px 0px 8px 60px;
     margin-left:-60px;
-    margin-bottom:3em;
+    margin-bottom:2em;
   }
   div.post.photo info {
     margin:0;
